fix article images not centered

--- a/wordplate/resources/assets/styles/components/pages/article/_article.scss
+++ b/wordplate/resources/assets/styles/components/pages/article/_article.scss
@@ -67,6 +67,14 @@
       letter-spacing: .41px;
       line-height: 32px;
       margin: 0 auto;
+
+      >p{
+        display: flex;
+        flex-direction: column;
+      }
+      img{
+        align-self: center;
+      }
     }
 
     .progress{
